--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,6 @@ body, html {
     padding: 0;
     background-color: #fffffa;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 body {
